<resources>
    <string name="app_name">TimeTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="task">Task</string>
    <string name="time">Time</string>
    <string name="start_timer">start timer</string>
    <string name="share">share</string>
    <string name="add">add</string>
    <string name="add_tracker">add tracker</string>
</resources>