<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/taskTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/descriptionTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/taskTV"
        app:layout_constraintEnd_toStartOf="@+id/timeTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskTV"
        app:layout_constraintTop_toTopOf="@id/taskTV" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/descriptionTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/descriptionTV"
        app:layout_constraintTop_toTopOf="@id/descriptionTV" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/descriptionTV"
        app:layout_constraintStart_toStartOf="@id/taskTV"
        app:layout_constraintTop_toBottomOf="@id/taskTV"
        tools:text="Task" />

    <TextView
        android:id="@+id/descriptionName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/timeTV"
        app:layout_constraintStart_toStartOf="@id/descriptionTV"
        app:layout_constraintTop_toBottomOf="@id/descriptionTV"
        tools:text="Description" />

    <TextView
        android:id="@+id/timeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/timeTV"
        app:layout_constraintTop_toBottomOf="@id/timeTV"
        tools:text="1:30" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/start_timer"
        app:layout_constraintStart_toStartOf="@id/taskName"
        app:layout_constraintTop_toBottomOf="@id/timeName" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="@id/timeName"
        app:layout_constraintTop_toBottomOf="@id/timeName" />


</androidx.constraintlayout.widget.ConstraintLayout>